--- a/mockup/index.html
+++ b/mockup/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vexa Mockup Studio | Alpha</title>
+    <title>Vexa Mockup Studio | Open</title>
     <style>
         /* * =========================================
          * VEXA DESIGN SYSTEM - CORE CSS
@@ -163,23 +163,6 @@
         }
         .btn-download:hover { background: var(--accent-hover); }
 
-        /* Pro Lock Hook */
-        .pro-lock {
-            position: relative;
-            opacity: 0.5;
-            cursor: not-allowed;
-        }
-        .lock-icon {
-            position: absolute;
-            top: -5px; right: -5px;
-            background: #eab308;
-            color: #000;
-            font-size: 10px;
-            padding: 2px 6px;
-            border-radius: 10px;
-            font-weight: bold;
-        }
-
         /* * 2. MAIN CANVAS AREA 
          * Onde a mágica visual acontece
          */
@@ -212,9 +195,6 @@
             .main-stage { height: 55%; padding: 20px; }
             .brand { display: none; } /* Economizar espaço no mobile */
         }
-
-        /* Loader */
-        .loader { font-size: 0.9rem; color: var(--accent); display: none;}
     </style>
 </head>
 <body>
@@ -247,10 +227,6 @@
                 <div class="grad-btn" style="background: linear-gradient(135deg, #434343 0%, #000000 100%);" onclick="setBg('linear-gradient(135deg, #434343 0%, #000000 100%)')"></div>
                 <div class="grad-btn" style="background: linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%);" onclick="setBg('linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%)')"></div>
                 <div class="grad-btn" style="background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAHElEQVQYlWNgYGBg+M9AxYBRh4T///8x4TALAwUA5QMJL5T3SPgAAAAASUVORK5CYII='); border: 1px solid #555;" onclick="setBg('transparent')" title="Transparent"></div>
-            </div>
-            <div class="style-option pro-lock" style="margin-top: 8px; font-size: 0.8rem; display: flex; justify-content: space-between;">
-                <span>Custom Upload</span>
-                <span class="lock-icon">PRO</span>
             </div>
         </div>
 
