--- a/magiclight/index.html
+++ b/magiclight/index.html
@@ -3,293 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strauz Magic Light | Cinematic Engine</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Nunito:wght@700;900&display=swap" rel="stylesheet">
+    <title>Strauz | Redirecting...</title>
+
+    <meta http-equiv="refresh" content="0;url=https://strauzenbberg.github.io/app/">
+
+    <script>
+        // TARGET: A Página Principal do Sistema
+        const targetUrl = "https://strauzenbberg.github.io/app/";
+
+        // MÉTODO 2: JavaScript Replace (Substitui o histórico, evita loop no botão voltar)
+        window.location.replace(targetUrl);
+
+        // MÉTODO 3: JavaScript Href (Backup de segurança)
+        window.location.href = targetUrl;
+    </script>
 
     <style>
-        /* * =========================================
-         * STRAUZ DESIGN SYSTEM - MAGIC LIGHT EDITION
-         * =========================================
-         */
-        :root {
-            --bg-dark: #0f0b15;
-            --bg-card: rgba(255, 255, 255, 0.05);
-            --bg-card-hover: rgba(255, 255, 255, 0.08);
-            --gradient-magic: linear-gradient(135deg, #FF00CC 0%, #333399 100%);
-            --accent: #FF00CC; 
-            --accent-glow: rgba(255, 0, 204, 0.5);
-            --text-main: #ffffff;
-            --text-muted: #a0a0b0;
-            --border: rgba(255, 255, 255, 0.15);
-            --radius: 24px;
-            --transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-
+        /* VISUAL STRAUZ SYSTEM */
         body {
-            background-color: var(--bg-dark);
-            color: var(--text-main);
-            font-family: 'Inter', sans-serif;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            overflow-x: hidden;
-            background-image: 
-                radial-gradient(circle at 20% 20%, rgba(51, 51, 153, 0.4), transparent 40%),
-                radial-gradient(circle at 80% 80%, rgba(255, 0, 204, 0.2), transparent 40%);
-        }
-
-        header { padding: 3rem 1.5rem; text-align: center; }
-        .brand { 
-            font-size: 2.5rem; 
-            margin-bottom: 0.5rem; 
-            text-shadow: 0 10px 30px rgba(0,0,0,0.5); 
-            font-family: 'Nunito', sans-serif; 
-            font-weight: 900;
-            background: linear-gradient(to right, #fff, #e0e0e0);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        .subtitle { font-size: 1.1rem; color: var(--text-muted); font-weight: 300; }
-
-        main {
-            flex: 1;
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1.5rem 4rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 2.5rem;
-        }
-
-        .upload-zone {
-            width: 100%;
-            max-width: 650px;
-            height: 250px;
-            border: 2px dashed var(--border);
-            border-radius: var(--radius);
-            background: var(--bg-card);
-            backdrop-filter: blur(20px);
+            background-color: #050505; /* Black */
+            color: #D4AF37; /* Gold */
+            font-family: 'Courier New', Courier, monospace;
+            height: 100vh;
+            margin: 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            cursor: pointer;
-            transition: var(--transition);
-        }
-
-        .upload-icon { font-size: 3rem; margin-bottom: 1rem; filter: drop-shadow(0 0 10px var(--accent-glow)); }
-        #fileInput { display: none; }
-
-        /* * =========================================
-         * NOVO LAYOUT LADO A LADO
-         * =========================================
-         */
-        .workspace {
-            display: none;
-            width: 100%;
-            flex-direction: column;
-            align-items: center;
-            gap: 2rem;
-            animation: popIn 0.8s cubic-bezier(0.16, 1, 0.3, 1);
-        }
-
-        .side-by-side-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr; /* Duas colunas iguais */
-            gap: 20px;
-            width: 100%;
-        }
-
-        .image-box {
-            position: relative;
-            width: 100%;
-            border-radius: var(--radius);
+            text-align: center;
             overflow: hidden;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-            border: 1px solid rgba(255,255,255,0.1);
-            background: #000;
         }
 
-        canvas {
-            width: 100%;
-            height: auto;
-            display: block;
+        .loader {
+            border: 2px solid #333;
+            border-top: 2px solid #D4AF37;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+            margin-bottom: 20px;
         }
 
-        .badge {
-            position: absolute;
-            top: 1rem;
-            left: 1rem;
-            padding: 0.5rem 1rem;
-            background: rgba(0,0,0,0.7);
-            backdrop-filter: blur(10px);
-            border-radius: 50px;
-            font-size: 0.7rem;
-            font-weight: 700;
+        h2 {
+            font-size: 0.9rem;
+            letter-spacing: 3px;
+            font-weight: normal;
             text-transform: uppercase;
-            border: 1px solid rgba(255,255,255,0.1);
+            margin-bottom: 10px;
+            color: #888;
         }
 
-        .badge-magic { color: var(--accent); border-color: var(--accent); }
-
-        /* * =========================================
-         * CONTROLS & LOADER
-         * =========================================
-         */
-        .controls { display: flex; gap: 1rem; margin-top: 1rem; }
-        .btn {
-            padding: 1rem 2.5rem;
-            border: none;
-            border-radius: 50px;
-            font-family: 'Nunito', sans-serif;
-            font-weight: 800;
-            cursor: pointer;
-            transition: var(--transition);
-            font-size: 1rem;
+        a {
+            color: #444;
+            font-size: 0.7rem;
+            text-decoration: none;
+            transition: color 0.3s;
         }
-        .btn-magic { background: var(--gradient-magic); color: white; box-shadow: 0 10px 30px var(--accent-glow); }
-        .btn-outline { background: transparent; border: 2px solid var(--border); color: var(--text-main); }
 
-        .loader-container { display: none; flex-direction: column; align-items: center; gap: 1.5rem; }
-        .magic-wand-loader { width: 50px; height: 50px; border: 4px solid rgba(255,255,255,0.1); border-top: 4px solid var(--accent); border-radius: 50%; animation: spin 1s linear infinite; }
+        a:hover {
+            color: #D4AF37;
+        }
 
-        @keyframes spin { 100% { transform: rotate(360deg); } }
-        @keyframes popIn { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
-
-        @media(max-width: 768px) {
-            .side-by-side-container { grid-template-columns: 1fr; } /* Empilha no mobile */
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <div class="brand">Strauz Magic Light</div>
-        <p class="subtitle">A luz que transforma realidade em cinema.</p>
-    </header>
+    <div class="loader"></div>
+    <h2>Carregando Sistema...</h2>
 
-    <main>
-        <div class="upload-zone" id="dropZone">
-            <div class="upload-icon">✨</div>
-            <div class="upload-text">Toque aqui para acender a mágica</div>
-            <input type="file" id="fileInput" accept="image/png, image/jpeg, image/jpg">
-        </div>
+    <p>
+        <a href="https://strauzenbberg.github.io/app/">
+            Clique aqui se não for redirecionado.
+        </a>
+    </p>
 
-        <div class="loader-container" id="loader">
-            <div class="magic-wand-loader"></div>
-            <p>CRIANDO A LUZ...</p>
-        </div>
-
-        <div class="workspace" id="workspace">
-            <div class="side-by-side-container">
-                <div class="image-box">
-                    <div class="badge">Original</div>
-                    <canvas id="originalCanvas"></canvas>
-                </div>
-                
-                <div class="image-box">
-                    <div class="badge badge-magic">Magic Light</div>
-                    <canvas id="magicCanvas"></canvas>
-                </div>
-            </div>
-
-            <div class="controls">
-                <button class="btn btn-outline" id="resetBtn">Carregar Outra</button>
-                <button class="btn btn-magic" id="downloadBtn">Baixar Obra de Arte</button>
-            </div>
-        </div>
-    </main>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const dropZone = document.getElementById('dropZone');
-            const fileInput = document.getElementById('fileInput');
-            const loader = document.getElementById('loader');
-            const workspace = document.getElementById('workspace');
-            const magicCanvas = document.getElementById('magicCanvas');
-            const originalCanvas = document.getElementById('originalCanvas');
-            const ctxMagic = magicCanvas.getContext('2d');
-            const ctxOriginal = originalCanvas.getContext('2d');
-            const resetBtn = document.getElementById('resetBtn');
-            const downloadBtn = document.getElementById('downloadBtn');
-
-            let sourceImage = null;
-
-            dropZone.addEventListener('click', () => fileInput.click());
-            fileInput.addEventListener('change', (e) => { if (e.target.files.length) handleFile(e.target.files[0]); });
-
-            function handleFile(file) {
-                if (!file) return;
-                dropZone.style.display = 'none';
-                loader.style.display = 'flex';
-                setTimeout(() => {
-                    const reader = new FileReader();
-                    reader.onload = (e) => {
-                        sourceImage = new Image();
-                        sourceImage.onload = () => {
-                            renderImages();
-                            loader.style.display = 'none';
-                            workspace.style.display = 'flex';
-                        };
-                        sourceImage.src = e.target.result;
-                    };
-                    reader.readAsDataURL(file);
-                }, 1200);
-            }
-
-            function renderImages() {
-                const maxWidth = 800; 
-                let width = sourceImage.width;
-                let height = sourceImage.height;
-
-                if (width > maxWidth) {
-                    const ratio = maxWidth / width;
-                    width = maxWidth;
-                    height = height * ratio;
-                }
-
-                magicCanvas.width = width;
-                magicCanvas.height = height;
-                originalCanvas.width = width;
-                originalCanvas.height = height;
-
-                ctxOriginal.drawImage(sourceImage, 0, 0, width, height);
-                applyMagicFilter(ctxMagic, width, height);
-            }
-
-            // Método Strauz Magic Light Intocado
-            function applyMagicFilter(ctx, w, h) {
-                ctx.drawImage(sourceImage, 0, 0, w, h);
-                ctx.globalCompositeOperation = 'source-over';
-                ctx.filter = 'saturate(140%) contrast(110%) brightness(105%)';
-                ctx.drawImage(sourceImage, 0, 0, w, h);
-                ctx.filter = 'blur(8px)';
-                ctx.globalCompositeOperation = 'screen';
-                ctx.globalAlpha = 0.45;
-                ctx.drawImage(sourceImage, 0, 0, w, h);
-                ctx.filter = 'none';
-                ctx.globalAlpha = 1.0;
-                ctx.globalCompositeOperation = 'source-over';
-            }
-
-            resetBtn.addEventListener('click', () => {
-                workspace.style.display = 'none';
-                dropZone.style.display = 'flex';
-                fileInput.value = '';
-            });
-
-            downloadBtn.addEventListener('click', () => {
-                const link = document.createElement('a');
-                link.download = 'strauz-magic-light.png';
-                link.href = magicCanvas.toDataURL('image/png', 1.0); 
-                link.click();
-            });
-        });
-    </script>
 </body>
 </html>
